# healnet

./: .gitattributes  .gitignore  False  README.md  env_legacy.yml  enviornment.yml  environment.yml  pyproject.toml  pyroject.toml  run_plan.sh  setup.cfg  setup.py  setup_old.py  tasks.py  valid_prep_ids.csv
config/: best_hyperparams.yml  hyperparameters.yml  latent_array_sweep.yaml  main.yml  main_gpu.yml  main_local.yml  perceiver_sweep.yaml  sweep.yaml  sweep_bayesian.yaml  sweep_grid.yaml
data/: readme.md
data/tcga/gdc_manifests/filtered/: blca_tmp.txt  blca_wsi_manifest_filtered.txt  brca_wsi_manifest_filtered.txt  hnsc_wsi_manifest_filtered.txt  kirp_wsi_manifest_filtered.txt  luad_wsi_manifest_filtered.txt  lusc_wsi_manifest_filtered.txt  paad_wsi_manifest_filtered.txt  ucec_wsi_manifest_filtered.txt
data/tcga/omic_xena/: blca_master.csv  brca_master.csv  kirp_master.csv  ucec_master.csv
healnet/: __init__.py  main.py  pyproject.toml  train.py
healnet/baselines/: __init__.py  generic.py  mcat.py  mm_prognosis.py  motcat.py
healnet/baselines/multimodn/: __init__.py  better_multimodn.py  decoders.py  encoders.py  multimodn.py  utils.py
healnet/etl/: __init__.py  base.py  loaders.py  preprocess.py  utils.py
healnet/models/: __init__.py  base.py  baselines.py  classification_utils.py  explainer.py  healnet.py  perceiver.py  survival_loss.py
healnet/tests/: test_baselines.py  test_healnet.py
healnet/utils/: __init__.py  loading.py  train_utils.py  wb.py
notebooks/: explainer.ipynb  figures.ipynb  late_fusion.ipynb  mm_lego.ipynb  patch_processing.ipynb  playground.ipynb  sample.ipynb
tutorial/: 01_Getting_Started.ipynb
x_perceiver/: copilot.py  fusion.py  main.py  perceiver.py
x_perceiver/etl/: __init__.py  loaders.py  utils.py
x_perceiver/models/: __init__.py  baselines.py  perceiver.py  survival_loss.py
x_perceiver/utils/: __init__.py  config.py  wb.py
(+4 files in other folders)
