[metadata]
name = healnet
version = 0.0.1
description = Scalable multi-modal deep learning architecture in PyTorch
long_description = file: README.md
author = Konstantin Hemker
author_email = konstantin.hemker@cl.cam.ac.uk
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3

[options]
;packages = find:
;package_dir =
;    =src
install_requires =
    einops
    torch>=1.13.1
    torchvision>=0.14.1
    openslide-python
    seaborn
    pandas>=1.5.3
    tqdm
    python-box
    scikit-learn
python_requires = >=3.6