[metadata]
name = healnet
version = 0.1.0
description = Scalable multi-modal deep learning architecture in PyTorch
long_description = file: README.md
author = Konstantin Hemker
author_email = konstantin.hemker@cl.cam.ac.uk
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    = . 
install_requires =
    einops
    torch>=1.13.1
    torchvision>=0.14.1
    pandas>=1.5.3
    tqdm
    python-box
    scikit-learn
    pytest
    pyyaml
    torchsummary
    torchmetrics

python_requires = >=3.6

[options.extras_require]
all = 
    jupyter
    h5py
    openslide-python
    seaborn
    invoke
    scikit-survival
    wandb

[options.packages.find]
include = healnet