[build-system]
requires=["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name="healnet"
version="0.0.1"
description="Scalable multi-modal deep learning architecture in PyTorch"
readme = "README.md"
requires-python=">=3.6"
authors=[{name="Konstantin Hemker", email="konstantin.hemker@cl.cam.ac.uk"}]
license={text="Apache 2.0"}

classifiers=[
    "Programming Language :: Python :: 3",
]
dependencies=[
    "einops",
    "torch",
    "torchvision",
    "openslide-python",
    "seaborn",
    "pandas"
]